Fixing style for preview poem in mainsection when the image is big and get overflow

--- a/frontend/src/components/Poem.module.css
+++ b/frontend/src/components/Poem.module.css
@@ -79,6 +79,7 @@
 }
 .content {
   font-size: 18px;
+  overflow-y: scroll;
 }
 
 .readOn {
